--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
             <div class="hero-text">
                 <h3 class="banner-titel">Explore Your Travel</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A, obcaecati. Eius exercitationem quam ex quisquam ut dolor itaque reiciendis cumque?</p>
-                <button>Where</button>
+                <div class="button-all">
+                <button class="button-body">Where Go</button>
+                <button class="button-body">When <i class="fa fa-caret-down"></i></button>
+                <button class="button-body">Select Type</button>
+                <button class="button-body"  style="background-color: orangered; color: whitesmoke;">Find Now</button>
+                </div>
             </div>
             
         </div>
